# SGPRS

./: .gitignore  CMakeLists.txt  build+prof.sh  build+run.sh  build.sh  build_libtorch.sh  debug.sh  dummy.sh  example  main.cc  main.cpp  main2.cpp  prof.sh  rrfc.yml  run.sh  run_concurrency.sh  run_interference.sh  run_speedup.sh  run_tailing.sh  speedup.ipynb  t2  t2.cu  test.cpp  to_graphics.sh  to_terminal.sh
.ipynb_checkpoints/: speedup-checkpoint.ipynb
results copy/: concurrency.csv  concurrency2.csv  concurrency3.csv  interference.csv  speedup.csv  speedup2.csv  tailing2.csv  tailing3.csv  tailing4.csv
results copy 2/: concurrency1 copy.csv  concurrency1.csv  concurrency2 copy.csv  concurrency2.csv  concurrency3 copy.csv  concurrency3.csv  interference.csv  speedup.csv  speedup3.csv  speedup_waves32.csv  tailing.csv
results copy 2/speedup/: avg.csv  batchnorm.csv  (+2 more)
src/: CMakeLists.txt
src/dat/: CMakeLists.txt  cif10.cpp  cif10.hpp
src/figures/: speedup.ipynb  speedup.py
src/figures/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  speedup-checkpoint.ipynb
src/net/: CMakeLists.txt  resnet.cpp  resnet.hpp
src/net/deeplab/: CMakeLists.txt  deeplab.cpp  deeplab.hpp  deeplab_decoder.cpp  deeplab_decoder.hpp
src/net/deeplab/backbones/: CMakeLists.txt  resnet_encoder.cpp  resnet_encoder.hpp  vgg_encoder.cpp  vgg_encoder.hpp
src/net/deeplab/utils/: CMakeLists.txt  interface.hpp  json.hpp  loss.hpp  readfile.hpp  util.cpp  util.hpp
src/sch/: CMakeLists.txt  cnt.cpp  cnt.hpp  ctx.cpp  ctx.hpp  ctxd.cpp  ctxd.hpp  loop.cpp  loop.hpp  main.hpp  opr.cpp  opr.hpp  schd.cpp  schd.hpp  sqnl.cpp  sqnl.hpp
src/tests/: CMakeLists.txt  concurrency.cpp  interference.cpp  save.cpp  speedup.cpp  tests.hpp
tests/: bench.py  count.py  prof.sh  sharing.py
(+28 files in other folders)
